Ex1 finished
